Challenge 2 finished completely

--- a/layout-challenges/2-semantic-markup/index.html
+++ b/layout-challenges/2-semantic-markup/index.html
@@ -15,6 +15,7 @@
 			<li><a href="#"><img src="rss.png"> Subscribe via. RSS</a></li>
 		</ul>
 	</nav>
+</header>
 	<section id="featured-image">
 		
 			<h2>Do you love flowers as much as we do?</h2>
@@ -108,6 +109,37 @@ Vivamus vitae nulla dolor. Suspendisse eu lacinia justo. Vestibulum a felis ante
 		</ul>
 	</section>
 </aside>
-</header>
+
+<footer>
+	<section>
+		<h3>About</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+	</section>
+	<section>
+		<h3>Blogroll</h3>
+		<ul>
+			<li><a href="#">NETTUTS+</a></li>
+			<li><a href="#">FreelanceSwitch</a></li>
+			<li><a href="#">In The Woods</a></li>
+			<li><a href="#">Netsetter</a></li>
+			<li><a href="#">PSDTUTS+</a></li>
+		</ul>
+	</section>
+	<section>
+		<h3>Popular</h3>
+		<ul>
+			<li><a href="#">This is the title of a blog post</a></li>
+			<li><a href="#">Lorem ipsum dolor sit amet</a></li>
+			<li><a href="#">Consectetur adipisicing elit, sed do eiusmod</a></li>
+			<li><a href="#">Duis aute irure dolor</a></li>
+			<li><a href="#">Excepteur sint occaecat cupidatat</a></li>
+			<li><a href="#">Reprehenderit in voluptate velit</a></li>
+			<li><a href="#">Officia deserunt mollit anim id est laborum</a></li>
+			<li><a href="#">Lorem ipsum dolor sit amet</a></li>
+		</ul>
+	</section>
+</footer>
+
 </body>
 </html>
