--- a/form-challenges/1-forms/materials/form.html
+++ b/form-challenges/1-forms/materials/form.html
@@ -69,6 +69,29 @@
    </head>
    <body>
       <div id="container">
+      
+      <form action="form.php" method="post">
+      <ul>
+         <li>
+            <label for="firstName">First Name:</label>
+            <input id="firstName" name="firstName" type="text" />
+         </li>
+         <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+         </li>
+         <li>
+            <label for="website">Website</label>
+            <input type="url" name="website" id="website" />
+         </li>
+         <li>
+            <label for="password">Password:</label>
+            <input type="password" />
+         </li>
+         <li>
+         <button type="submit">Submit Info</button>
+         </li>
+      </form>
 
     </div>
    </body>
