--- a/layout-challenges/2-semantic-markup/index.html
+++ b/layout-challenges/2-semantic-markup/index.html
@@ -72,22 +72,22 @@ Vivamus vitae nulla dolor. Suspendisse eu lacinia justo. Vestibulum a felis ante
 <section id="comment-form">
 	<h3>Post a comment</h3>
 	<form action="new-comment.php" method="post">
-	<fieldset>
+	
 		<label for="name">Name</label>
-		<input name="name" type="text" required>
-	</fieldset>
-	<fieldset>
+		<input id="name" name="name" type="text" required><br>
+	
+	
 		<label for="email">Email</label>
-		<input name="email" type="text" required>
-	</fieldset>
-	<fieldset>
+		<input id="email" name="email" type="email" required><br>
+	
+	
 		<label for="website">Website</label>
-		<input name="website" type="text" required>
-	</fieldset>
-	<fieldset>
+		<input  id="website" name="website" type="text" required><br>
+	
+	
 		<label for="comment">Comment</label>
-		<textarea name="comment" required></textarea>
-	</fieldset>
+		<textarea id="comment" name="comment" required></textarea>
+	
 	<input type="submit" value="Post Comment">
 	</form>
 </section>
