--- a/form-challenges/1-forms/materials/form.html
+++ b/form-challenges/1-forms/materials/form.html
@@ -77,11 +77,11 @@
             <input id="firstName" name="firstName" type="text" />
          </li>
          <li>
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" name="email" />
          </li>
          <li>
-            <label for="website">Website</label>
+            <label for="website">Website:</label>
             <input type="url" name="website" id="website" />
          </li>
          <li>
