--- a/form-challenges/1-forms/materials/form.html
+++ b/form-challenges/1-forms/materials/form.html
@@ -74,18 +74,18 @@
       <ul>
          <li>
             <label class="field" for="firstName">First Name:</label>
-            <input id="firstName" name="firstName" type="text" />
+            <input id="firstName" name="firstName" required type="text" />
          </li>
          <li>
             <label class="field" for="email">Email:</label>
-            <input type="email" id="email" name="email" />
+            <input type="email" id="email" autofocus placeholder="Please enter your email address" name="email" required />
          </li>
          <li>
             <label class="field" for="website">Website:</label>
-            <input type="url" name="website" id="website" />
+            <input type="url" name="website" placeholder="Enter a valid url" id="website" />
          </li>
          <li>
-            <label class="field" for="password">Password:</label>
+            <label class="field" placeholder="choose a really tough password" for="password">Password:</label>
             <input type="password" />
          </li>
          <fieldset>
